z-index correction

--- a/source/less/blocks/crumbs.less
+++ b/source/less/blocks/crumbs.less
@@ -1,6 +1,7 @@
 .crumbs {
   width: 100%;
   padding: @crumbs-top-padding @standart-side-padding;
+  z-index: @index-crumbs;
 }
 
 .crumbs__wrap {
