--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -6,6 +6,12 @@
 @tablet-width: 900px;
 @mobile-width: 600px;
 
+//overlay context!!!
+@index-table-header: 1; // .info-table__table thead
+@index-crumbs: 2; // .crumbs
+@index-navigation: 3; // .navigation
+@index-menu-btn: 4; // header__menu-btn
+
 //header
 @search-width: 400px;
 @mobile-search-width: 60%;
