--- a/source/less/main-blocks/navigation.less
+++ b/source/less/main-blocks/navigation.less
@@ -5,7 +5,7 @@
   grid-area: nav;
   overflow-y: auto;
   position: relative;
-  z-index: 2;
+  z-index: @index-navigation;
 
   display: grid;
   grid-template-columns: 1fr;
